Stabilize test workflow with cleanup, preflight checks, and reporting.
Fix config overlay precedence and Surefire suite selection, add run-tests.sh as the main workflow, terminate apps and shut down managed devices after runs, validate Appium/Ollama before sessions, attach Allure screenshots, and document clone-to-report flow.